[gd_scene load_steps=3 format=3 uid="uid://c5e30p3bbbapp"]

[ext_resource type="Script" path="res://scripts/menu/pause_menu.gd" id="1_7afrs"]
[ext_resource type="FontFile" uid="uid://dj8pywgoksxqb" path="res://assets/font/textFont.otf" id="2_qjcfh"]

[node name="PauseMenuV2" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7afrs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qjcfh")
theme_override_font_sizes/font_size = 100
text = "Chess Battle is paused"

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qjcfh")
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="RestartButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qjcfh")
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="BackToHomeButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qjcfh")
theme_override_font_sizes/font_size = 50
text = "Back to Home"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qjcfh")
theme_override_font_sizes/font_size = 50
text = "Quit
"

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/RestartButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GridContainer/BackToHomeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/BackToHomeButton" to="." method="_on_back_to_home_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
